package structure.facadePattern.parts;

public class Memory {

    public void load(long position, byte[] data) {
        //...
    }

}
